--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "14.2.16",
+    "next-seo": "^6.6.0",
+    "next-sitemap": "^4.2.3",
     "next-themes": "latest",
     "path": "latest",
     "react": "^18",
@@ -60,6 +62,7 @@
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
+    "schema-dts": "^1.1.5",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
