--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,32 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Dependencies
+node_modules/
 
-# dependencies
-/node_modules
+# Build output
+.next/
+out/
 
-# next.js
-/.next/
-/out/
+# Environment variables (keep API keys secure)
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# production
-/build
+# TypeScript
+*.tsbuildinfo
 
-# debug
+# Debug logs
 npm-debug.log*
 yarn-debug.log*
-yarn-error.log*
-.pnpm-debug.log*
+pnpm-debug.log*
 
-# env files
-.env*
+# IDE settings
+.vscode/
+.idea/
 
-# vercel
-.vercel
+# OS system files
+.DS_Store
+Thumbs.db
 
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+# Git-related
+.git/
