--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@hachther/mesomb": "^2.0.0",
     "@headlessui/react": "^2.2.7",
     "@hookform/resolvers": "^5.2.1",
+    "@next/third-parties": "^15.5.3",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/auth-helpers-react": "^0.5.0",
     "@supabase/auth-ui-react": "^0.4.7",
